# rusty-snake

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yaml
src/: main.rs
