[package]
name = "rusty-snake"
version = "0.1.1"
edition = "2021"
authors = ["Cem Eliguzel <cemeliguzel@email.com>"]
license = "MIT OR Apache-2.0"
description = "Snake game"
readme = "README.md"
homepage = "https://github.com/rimbi/rusty-snake"
repository = "https://github.com/rimbi/rusty-snake"
keywords = ["game", "snake"]
categories = ["games"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-terminal = "0.8.5"
rand = "0.8.5"
